<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mean Weather</string>
    <string name="action_about">About</string>
    
    <!-- SplashScreen -->
    <string name="progressbar_text">Retrieving current location</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_message">Localization Provider disabled. Please enable it.</string>
    <string name="network_message">Network connection not available. Please enable it.</string>
    <string name="connection_lost">Wifi connection lost</string>
    <string name="max_attemps">Max number of attemps reached.\nPlease control your connection</string>
    <string name="service_not_available">Unable to retrieve location.\nService not available</string>
    <string name="io_exception">Error while connecting to the server. New retryng..</string>
    <string name="null_position">Current location not available</string>
    
    <!-- MainActivity -->
	<string name="add_city">Add a new city</string>
	<string name="toast_already_present">City already present in the list!</string>
	<string name="edit_city_hint">Example: Rome</string>
	<string name="city_name">City</string>
	<string name="country_code">Country code</string>
	<string name="edit_country_hint">Example: IT</string>
	<string name="current_textview"> </string>
	<string name="current_location"> (Current Location)</string>
	<string name="button_add_city">Add</string>
	<string name="city_list">Recent Cities</string>
	<string name="progress_msg">Retrieving information</string>
	<string name="json_error">Unable to retrieve information from the sources</string>
	<string name="warning_edit_text">Insert all values before adding a new city</string>
	<string name="warning_edit_contry_length">Country code length must be of 2 characters</string>
	
	<!-- MeanActivity -->
	<string name="mean_action_bar_title">Weather for</string>
	<string name="text_city">City</string>
	<string name="text_temperature">Temperature</string>
	<string name="text_forecast">Forecast</string>
	<string name="table_title">Other Information</string>
	<string name="table_description">Description</string>
	<string name="table_wind">Wind</string>
	<string name="table_humidity">Humidity</string>
	<string name="table_pressure">Pressure</string>
	<string name="table_visibility">Visibility</string>
	<string name="not_available">NA</string>
	<string name="details_button">View Details</string>
	
	<!-- DetailsActivity -->
	<string name="details_action_bar_title">Details for</string>
	
	
	<!-- AboutActivity -->
	<string name="tv_version">Version 1.0</string>
	<string name="tv_developers">Developers</string>
	<string name="tv_team">Team: apdev</string>
	<string name="tv_dev1">Andrea Alessandro</string>
	<string name="tv_dev2">Vanessa Perciballi</string>
	<string name="tv_email1">andrea.alessandro90@gmail.com</string>
	<string name="tv_email2">v.perciballi@gmail.com</string>
	<string name="tv_university">University of Rome Tor Vergata</string>
	
</resources>
