<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.apdev.weathermean.presentation.MainActivity"
    android:background="@drawable/radial_gradient"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textViewTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/add_city"
        android:background="@color/logo"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/editTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/edit_city_hint"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonAddCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_add_city" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTitleCityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/logo"
        android:text="@string/city_list"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listViewCities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>